test/langtools/tools/javac/specialConstantFolding/ReflectiveErrorTest.out
ReflectiveErrorTest.java:11:58: compiler.err.reflective.error: ofDescriptor, java.lang.constant.MethodTypeDesc, Bad method descriptor: (Ljava/lang/String;^)D
1 error
